--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,5 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <title>LegoFriendFinder</title>
-        <link rel="stylesheet" type="text/css" href="survey.css">
+    <link rel="stylesheet" type="text/css" href="survey.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet" type="text/css">
 </head>
+<div class="heading">
+    <h1>Submit Your Survey to find a new Lego Friend</h1>
+</div>
+<div class="parallax"></div>
+
+<div class="container">
+	<div class="text-block">
+  <img class="head" src="leghead.png" alt="Nature">
+  <img class="head-2" src="leghead.png" alt="Nature">
+  <img class="head-3" src="leghead.png" alt="Nature">
+  
+    <h4>Nature</h4>
+    <p>What a beautiful sunrise</p>
+  </div>
+</div>
+<div class="parallax-2"></div>
+<!-- <div>	
+	<div class="question-box">
+	<img class="leghead1" src="leghead.png" alt="head">
+	<h4 class="question">1. Legos are toys.</h4>
+    <select class="chosen-select" id="Q1">
+        <option value=""></option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+	</div>
+</div> -->
+	<!-- <div class="question-box">
+		<img class="leghead3" src="leghead.png" alt="head">
+    <h4 class="question">2. Legos are a highly sophisticated inter-locking brick system.</h4>
+    <select class="chosen-select" id="Q2">
+        <option value=""></option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+	</div>
+
+	<div class="question-box">
+		<img class="leghead2" src="leghead.png" alt="head">
+    <h4 class="question"> Build Spaceships > Vehicles.</h4>
+    <select class="chosen-select" id="Q3">
+        <option value=""></option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+	</div> -->
+<!-- </div> -->
+</body>
+
+</html>
